# obs-vjlink

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
data/locale/: de-DE.ini
effects/3d/: iridescent_mesh.effect  metaballs.effect  sphere_field.effect  torus_knot.effect
effects/audio_viz/: beat_flash.effect  laser_scan.effect  spectrum_radial.effect  waveform_bars.effect
effects/common/: debug_overlay.effect  debug_solid.effect  luma_alpha.effect  videowall_blit.effect  vjlink_test.effect
effects/flash/: beat_cuts.effect  flash_kick.effect  flash_radial.effect  flash_shake.effect  flash_snare.effect  strobe_color.effect  strobe_gate.effect  strobe_grid.effect  strobe_hard.effect  strobe_invert.effect
effects/fractal/: ifs_fractal.effect  julia_set.effect  mandelbrot_zoom.effect
effects/geometric/: acid_mandala.effect  beat_blocks.effect  beat_rings.effect  concrete_pulse.effect  cyber_grid.effect  kaleidoscope.effect  logo_pulse.effect  logo_runner.effect  sacred_geometry.effect  type_animator.effect  voronoi.effect  witch_sigil.effect
effects/glitch/: ascii_art.effect  datamosh.effect  glitch_basic.effect  mono_outline.effect  pixel_sort.effect  rgb_split.effect
effects/particles/: fire_emitter.effect  galaxy_spiral.effect  particle_render.effect  particle_sim.effect  particle_storm.effect  toxic_sludge.effect
effects/plasma/: demoscene_plasma.effect  lava_lamp.effect  liquid_metal.effect  liquid_sim.effect  plasma_classic.effect
effects/postprocess/: bloom_pro.effect  color_grade.effect  displacement.effect  feedback.effect  holographic_foil.effect  lens_flare.effect  smoke_volume.effect  volumetric_light.effect
effects/retro/: crt_pro.effect  crt_scanlines.effect  matrix_rain.effect  vaporwave_sunset.effect  vhs_glitch.effect  virtual_drug.effect
effects/tunnel/: dna_helix.effect  galaxy_tunnel.effect  hex_tunnel.effect  industrial_strobe_tunnel.effect  tunnel_classic.effect  wireframe_city.effect
effects_meta/: acid_mandala.json  ascii_art.json  beat_blocks.json  beat_flash.json  beat_rings.json  bloom_pro.json  color_grade.json  concrete_pulse.json  crt_pro.json  crt_scanlines.json  cyber_grid.json  datamosh.json  demoscene_plasma.json  displacement.json  dna_helix.json  feedback.json  fire_emitter.json  galaxy_spiral.json  galaxy_tunnel.json  glitch_basic.json  hex_tunnel.json  holographic_foil.json  ifs_fractal.json  industrial_strobe_tunnel.json  iridescent_mesh.json  julia_set.json  kaleidoscope.json  laser_scan.json  lava_lamp.json  lens_flare.json  liquid_metal.json  liquid_sim.json  logo_pulse.json  logo_runner.json  mandelbrot_zoom.json  matrix_rain.json  metaballs.json  mono_outline.json  particle_storm.json  pixel_sort.json  (+18 more)
effects_meta/flash/: beat_cuts.json  flash_kick.json  flash_radial.json  flash_shake.json  flash_snare.json  strobe_color.json  strobe_gate.json  strobe_grid.json  strobe_hard.json  strobe_invert.json
presets/builtin/: cyber_plasma.json  deep_space.json  fire_storm.json  fractal_journey.json  galaxy_voyage.json  glitch_machine.json  hex_rave.json  liquid_chrome.json  matrix_hacker.json  neon_tunnel.json  retro_vhs.json  sacred_pulse.json
src/: plugin-main.c  vjlink_context.c  vjlink_context.h
src/audio/: audio_engine.c  audio_engine.h  audio_texture.c  audio_texture.h  bpm_detector.c  bpm_detector.h
src/audio/kissfft/: kiss_fft.c  kiss_fft.h
src/controls/: hotkey_manager.c  hotkey_manager.h  http_server.c  http_server.h  osc_sender.c  osc_sender.h  source_trigger.c  source_trigger.h  tools_menu.c  tools_menu.h  websocket_handler.c  websocket_handler.h
src/presets/: param_animator.c  param_animator.h  preset_manager.c  preset_manager.h
src/rendering/: band_effects.c  band_effects.h  compositor.c  compositor.h  effect_system.c  effect_system.h  engine3d.c  engine3d.h  media_layer.c  media_layer.h  particles.c  particles.h
src/sources/: audio_filter.c  audio_filter.h  compositor_source.c  compositor_source.h  effect_filter.c  effect_filter.h  videowall_source.c  videowall_source.h
src/ui/: properties_builder.c  properties_builder.h
web-ui/: vjlink-control.html
